data/collection/fixes/descriptions/kotlin/KT-12477
{code:title=0.kt}
const val x = Unresolved
{code}

```
0.kt:1:1: error: const 'val' has type '[ERROR : Type for Unresolved]'. Only primitives and String are allowed
const val x = Unresolved
^
0.kt:1:15: error: unresolved reference: Unresolved
const val x = Unresolved
              ^
```

The second error is fine, the first one is useless and should not be reported.